--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<%= yield %>
+	<%= link_to "Home", root_path %>
+	<%=	 link_to "About", about_path %>
+
+
+
+	<%= yield %>
 
 </body>
 </html>
